[package]
name = "hyperlane-utils"
version = "24.2.1"
readme = "README.md"
edition = "2024"
authors = ["root@ltpp.vip"]
license = "MIT"
description = """A library providing utils for hyperlane."""
keywords = ["http", "request", "response", "tcp", "redirect"]
repository = "https://github.com/hyperlane-dev/hyperlane-utils.git"
categories = ["network-programming", "web-programming"]
exclude = ["target", "Cargo.lock", "sh", ".github"]

[dependencies]
hex = "0.4.3"
log = "0.4.29"
md5 = "0.8.0"
url = "2.5.8"
sha2 = "0.11.0"
snafu = "0.9.0"
ahash = "0.8.12"
redis = "1.1.0"
rinja = "0.3.5"
regex = "1.12.3"
base64 = "0.22.1"
chrono = "0.4.44"
lettre = "0.11.19"
dotenvy = "0.15.7"
futures = "0.3.32"
sysinfo = "0.38.4"
num_cpus = "1.17.0"
chunkify = "0.6.48"
once_cell = "1.21.4"
simd-json = "0.17.0"
twox-hash = "2.1.2"
future-fn = "0.3.15"
serde_with = "3.18.0"
serde_yaml = "0.9.33"
hot-restart = "0.6.15"
jwt-service = "0.2.1"
tracing-log = "0.2.0"
urlencoding = "2.1.3"
color-output = "10.0.0"
clonelicious = "2.2.17"
http-request = "8.91.108"
serde-xml-rs = "0.8.2"
lombok-macros = "2.0.27"
hyperlane-log = "4.0.6"
server-manager = "5.0.12"
file-operation = "0.8.19"
bytemuck_derive = "1.10.2"
compare_version = "2.0.4"
instrument-level = "1.0.12"
serde_urlencoded = "0.7.1"
hyperlane-macros = "17.0.9"
bin-encode-decode = "1.1.41"
recoverable-spawn = "3.9.19"
hyperlane-broadcast = "2.0.2"
std-macro-extensions = "1.0.0"
recoverable-thread-pool = "2.4.19"
hyperlane-plugin-websocket = "11.0.8"
rust_decimal = { version = "1.40.0", features = ["serde"] }
utoipa-rapidoc = { version = "6.0.0", features = ["actix-web"] }
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
utoipa = { version = "5.4.0", features = ["openapi_extensions"] }
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "mysql", "postgres"] }
sea-orm = { version = "1.1.19", features = [
    "sqlx-mysql",
    "sqlx-postgres",
    "sqlx-sqlite",
    "runtime-tokio-rustls",
] }
utoipa-swagger-ui = { version = "9.0.2", features = [
    "debug-embed",
    "vendored",
    "actix-web",
] }
uuid = { version = "1.22.0", features = [
    "v1",
    "v3",
    "v4",
    "v5",
    "v6",
    "v7",
    "v8",
    "serde",
    "fast-rng",
    "macro-diagnostics",
    "arbitrary",
    "bytemuck",
    "rng-rand",
    "rng-getrandom",
    "rng",
    "md5",
    "sha1",
    "borsh",
    "zerocopy",
] }

[profile.dev]
incremental = false
opt-level = 3
lto = true
panic = "unwind"
debug = false
codegen-units = 1
strip = "debuginfo"

[profile.release]
incremental = false
opt-level = 3
lto = true
panic = "unwind"
debug = false
codegen-units = 1
strip = "debuginfo"
