[package]
name = "hyperlane-utils"
version = "33.1.14"
readme = "README.md"
edition = "2024"
authors = ["root@ltpp.vip"]
license = "MIT"
description = """A library providing utils for hyperlane."""
keywords = ["http", "request", "response", "tcp", "redirect"]
repository = "https://github.com/hyperlane-dev/hyperlane-utils.git"
categories = ["network-programming", "web-programming"]
exclude = ["target", "Cargo.lock", "sh", ".github"]

[dependencies]
hex = "0.4.3"
log = "0.4.33"
md5 = "0.8.1"
url = "2.5.8"
rand = "0.10.2"
sha2 = "0.11.0"
snafu = "0.9.2"
ahash = "0.8.12"
redis = "1.4.1"
rinja = "0.3.5"
which = "8.0.5"
regex = "1.13.1"
scraper = "0.27.0"
base64 = "0.22.1"
chrono = "0.4.45"
lettre = "0.11.22"
dotenvy = "0.15.7"
futures = "0.3.33"
sysinfo = "0.38.4"
num_cpus = "1.17.0"
chunkify = "0.6.60"
once_cell = "1.21.4"
simd-json = "0.17.3"
twox-hash = "2.1.3"
future-fn = "0.3.26"
serde_with = "3.21.0"
serde_yaml = "0.9.34"
hot-restart = "0.6.27"
jwt-service = "0.2.11"
tracing-log = "0.2.0"
urlencoding = "2.1.3"
color-output = "10.0.10"
clonelicious = "2.2.28"
serde-xml-rs = "0.8.2"
lombok-macros = "2.0.36"
hyperlane-log = "4.0.16"
server-manager = "5.0.24"
file-operation = "0.8.32"
bytemuck_derive = "1.11.0"
compare_version = "2.0.14"
instrument-level = "1.0.21"
serde_urlencoded = "0.7.1"
rustls-pki-types = "1.15.1"
hyperlane-macros = "23.0.21"
bin-encode-decode = "1.1.51"
recoverable-spawn = "3.9.30"
hyperlane-broadcast = "2.0.13"
std-macro-extensions = "1.0.14"
recoverable-thread-pool = "2.4.28"
hyperlane-plugin-websocket = "14.0.18"
aes = { version = "0.9.1", features = ["hazmat"] }
getrandom = { version = "0.4.3", features = ["sys_rng"] }
rust_decimal = { version = "1.42.1", features = ["serde"] }
cipher = { version = "0.5.2", features = ["block-padding"] }
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
utoipa-rapidoc = { version = "6.0.0", features = ["actix-web"] }
jsonwebtoken = { version = "10.4.0", features = ["rust_crypto"] }
utoipa = { version = "5.5.0", features = ["openapi_extensions"] }
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "mysql", "postgres"] }
sea-orm = { version = "1.1.20", features = [
    "sqlx-mysql",
    "sqlx-postgres",
    "sqlx-sqlite",
    "runtime-tokio-rustls",
] }
utoipa-swagger-ui = { version = "9.0.2", features = [
    "debug-embed",
    "vendored",
    "actix-web",
] }
reqwest = { version = "0.13.4", features = [
    "json",
    "stream",
    "multipart",
    "cookies",
    "gzip",
    "socks",
    "blocking",
] }
rsa = { version = "0.9.10", default-features = false, features = [
    "std",
    "pem",
    "u64_digit",
    "hazmat",
    "getrandom",
    "nightly",
    "serde",
    "sha2",
    "sha1",
    "pkcs5",
] }
uuid = { version = "1.24.0", features = [
    "v1",
    "v3",
    "v4",
    "v5",
    "v6",
    "v7",
    "v8",
    "serde",
    "fast-rng",
    "macro-diagnostics",
    "arbitrary",
    "bytemuck",
    "rng-rand",
    "rng-getrandom",
    "rng",
    "md5",
    "sha1",
    "borsh",
    "zerocopy",
] }

[profile.dev]
incremental = false
opt-level = 3
lto = true
panic = "unwind"
debug = false
codegen-units = 1
strip = "debuginfo"

[profile.release]
incremental = false
opt-level = 3
lto = true
panic = "unwind"
debug = false
codegen-units = 1
strip = "debuginfo"
